# lighthouse

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: basic_cli.rs  registration.rs  save_bridge.rs  send_state.rs
src/: bridge.rs  color.rs  colors.rs  controllers.rs  helpers.rs  lib.rs  lights.rs
src/hue/: controllers.rs  lights.rs  mod.rs
tests/: deserialization.rs  mod.rs
tests/json_examples/: light.json  lightstrip.json
