[package]
name = "lighthouse"
version = "0.1.0"
authors = ["Finnkauski <iwiivi@gmail.com>"]
description="Command line tool and Philips Hue light control framework wrapping up the Hue API"
license="AGPL-3.0-or-later"
homepage="https://finnkauski.com"
documentation="https://docs.rs/lighthouse/"
repository="https://github.com/finnkauski/lighthouse"
edition = "2018"
readme="README.md"

[dependencies]
reqwest = {version = "0.10.6", features=["json"]}
tokio = {version = "0.2", features=["macros", "rt-core", "time"]}
futures = "0.3.5"
ssdp = "0.7.0"
url = "2.1.1"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
dotenv = "0.15.0"
dirs = "2.0.2"
# clap = "2.33.0"
# palette = "0.5.0"


# [[bin]]
# name = "lh"
# path = "src/bin/lighthouse.rs"
