[package]
name = "lighthouse"
version = "0.1.0"
authors = ["Finnkauski <iwiivi@gmail.com>"]
description="Command line tool and Philips Hue light control framework wrapping up the Hue API"
license="AGPL-3.0-or-later"
homepage="https://finnkauski.com"
documentation="https://docs.rs/lighthouse/"
repository="https://github.com/finnkauski/lighthouse"
edition = "2018"
readme="README.md"

[features]
default=[]
persist = ["ron"]


[dependencies]
reqwest = {version = "0.10.6", features=["json"]}
tokio = {version = "0.2", features=["macros", "rt-core"]}
futures = "0.3.5"
ssdp = "0.7.0"
url = "2.1.1"
serde = {version = "*", features = ["derive"]}
serde_json = "*"

# Optional dependencies
dotenv = {version ="0.15.0", optional = true}
dirs = {version = "2.0.2", optional = true}
ron = {version ="0.6.0" , optional = true}


# [[bin]]
# name = "lh"
# path = "src/bin/lighthouse.rs"
