[package]
name = "lighthouse"
version = "0.2.0"
authors = ["Finnkauski <iwiivi@gmail.com>"]
description="Command line tool and Philips Hue light control framework wrapping up the Hue API"
license="AGPL-3.0-or-later"
homepage="https://finnkauski.com"
documentation="https://docs.rs/lighthouse/"
repository="https://github.com/finnkauski/lighthouse"
edition = "2018"
readme="README.md"

[features]
default=["color", "persist"]
persist = []
color = ["palette"]


[dependencies]
reqwest = {version = "0.10.6", features=["json"], default-features=false}
tokio = {version = "0.2", features=["rt-core", "stream"]}
futures = "0.3.5"
ssdp = "0.7.0"
url = "2.1.1"
serde = {version = "1.0.114", features = ["derive"]}
serde_json = "1.0.56"

# Optional dependencies
toml = {version ="0.5.6" , optional = true}
palette = {version ="0.5.0" , optional = true}



# [[bin]]
# name = "lh"
# path = "src/bin/lighthouse.rs"
